# accounting-ops

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  DEPLOYMENT_STATUS.md  LICENSE.txt  README.md  broker.env.example  distribution.dist.in  go.mod  go.sum  version.h.in
.claude/: settings.json
.claude/skills/deputy/: SKILL.md
.claude/skills/deputy/scripts/: api_wrapper.py  get_timesheets.py  test_auth.py
.claude/skills/quickbooks/: SKILL.md  api-reference.md
.claude/skills/quickbooks/scripts/: api_wrapper.py  check_token.py  get_bank_transactions.py  get_company_info.sh  oauth_setup.py  reconcile_bank.py  refresh_token.py  token_manager.py
.claude/skills/quickbooks/templates/: bank_statement_template.csv
.claude/skills/xero/: SKILL.md
.claude/skills/xero/scripts/: api_wrapper.py  get_timesheets.py  oauth_setup.py  token_manager.py
.github/workflows/: deploy-broker.yml  deploy-haiku.yml  deploy-linux.yml  deploy-macos.yml  deploy-windows.yml
cmd/acct/: main.go
cmd/broker/: main.go
config/: README.md  credentials.json  deputy_credentials.json.template  haiku-toolchain.cmake  quickbooks_credentials.json.template  xero_credentials.json.template
docs/: ARCHITECTURE_DECISIONS.md  BROKER_ENV_TEMPLATE.md  BUILDING.md  DEV_BROKER_SETUP.md  GITHUB_DEPLOYMENT_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICKBOOKS_DEPLOYMENT_CHECKLIST.md  auth-broker-architecture.md  testing-guide.md  workflows.md
docs/help/: client_manager_tool.md  deputy_tool.md  first_run_cli_tool.md  first_run_gui_tool.md  quickbooks_tool.md  skill_editor_tool.md  xero_tool.md
docs/man/man1/: client_manager_tool.1  deputy_tool.1  first_run_cli_tool.1  first_run_gui_tool.1  quickbooks_tool.1  skill_editor_tool.1  xero_tool.1
internal/broker/: config.go  json.go  server.go  store.go  types.go
internal/broker/sql/: schema.sql
internal/cli/: app.go
scripts/: build_deploy_broker.sh  deploy_dev_broker.sh
skills/: CMakeLists.txt
skills/data/: deputy.skill.json  quickbooks.skill.json  xero.skill.json
skills/include/skills/: CredentialStore.hpp  SkillRepository.hpp
skills/src/: CredentialStore.cpp  SkillRepository.cpp
tools/: CMakeLists.txt
tools/ci/: setup-haiku-cross-env.sh  update-haiku-repo.sh
tools/client_manager/: CMakeLists.txt  ClientManagerWindow.cpp  ClientManagerWindow.hpp  main.cpp
tools/common/: CMakeLists.txt  ConnectionTestWidget.cpp  CredentialSelector.cpp
tools/common/include/tooling/: ConnectionTestWidget.hpp  CredentialSelector.hpp
tools/deputy/: CMakeLists.txt  DeputyWindow.cpp  DeputyWindow.hpp  main.cpp
tools/first_run_cli/: CMakeLists.txt  main.cpp
tools/first_run_gui/: CMakeLists.txt  FirstRunWizard.cpp  FirstRunWizard.hpp  main.cpp
tools/quickbooks/: CMakeLists.txt  QuickBooksWindow.cpp  QuickBooksWindow.hpp  main.cpp
tools/skill_editor/: CMakeLists.txt  SkillEditorWindow.cpp  SkillEditorWindow.hpp  main.cpp
tools/xero/: CMakeLists.txt  XeroWindow.cpp  XeroWindow.hpp  main.cpp
